fix: rename plugin for WordPress.org review
