# src/rest/listmonk-settings/api-client.ts
@@ -19,7 +19,7 @@ export const readListmonkSettingsResourceEndpoint = createEndpoint<
   authMode: 'authenticated-rest-nonce',
   method: 'GET',
   operationId: 'readListmonkSettingsResource',
-  path: '/connector-for-newspack-newsletters-and-listmonk/v1/listmonk-settings/item',
+  path: '/wp-typia-newsletter-connector/v1/listmonk-settings/item',
   requestLocation: 'query',
   validateRequest: apiValidators.readQuery,
   validateResponse: apiValidators.readResponse,
@@ -40,7 +40,7 @@ export const createListmonkSettingsResourceEndpoint = createEndpoint<
   authMode: 'authenticated-rest-nonce',
   method: 'POST',
   operationId: 'createListmonkSettingsResource',
-  path: '/connector-for-newspack-newsletters-and-listmonk/v1/listmonk-settings',
+  path: '/wp-typia-newsletter-connector/v1/listmonk-settings',
   requestLocation: 'body',
   validateRequest: apiValidators.createRequest,
   validateResponse: apiValidators.createResponse,
