# src/rest/listmonk-settings/api.openapi.json
@@ -218,7 +218,7 @@
 	},
 	"openapi": "3.1.0",
 	"paths": {
-		"/connector-for-newspack-newsletters-and-listmonk/v1/listmonk-settings/item": {
+		"/wp-typia-newsletter-connector/v1/listmonk-settings/item": {
 			"get": {
 				"operationId": "readListmonkSettingsResource",
 				"responses": {
@@ -247,7 +247,7 @@
 				]
 			}
 		},
-		"/connector-for-newspack-newsletters-and-listmonk/v1/listmonk-settings": {
+		"/wp-typia-newsletter-connector/v1/listmonk-settings": {
 			"post": {
 				"operationId": "createListmonkSettingsResource",
 				"responses": {
